--- a/Hoi4ModdingSupporter/MainWindow.xaml
+++ b/Hoi4ModdingSupporter/MainWindow.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Name="MainWindow1" x:Class="Hoi4ModdingSupporter.MainWindow"
+﻿<Window x:Name="Mainwindow" x:Class="Hoi4ModdingSupporter.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Hoi4ModdingSupporter"
         mc:Ignorable="d"
-        Title="Hoi4 Modding Supporter" Height="600" Width="800" Icon="goal_unknown.png">
+        Title="Hoi4 Modding Supporter" Height="600" Width="800" Icon="Assets\\goal_unknown.png">
     <Grid x:Name="Back" Background="#FF4D4D4D">
         <DockPanel>
             <Menu x:Name="DockBase" DockPanel.Dock="Top" Background="#FF4D4D4D">
                 <MenuItem Header="File (_F)" Background="White">
-                    <MenuItem Header="New Project"/>
-                    <MenuItem Header="Open Project"/>
+                    <MenuItem Header="New Project" Click="newProject"/>
+                    <MenuItem Header="Open Project" Click="openProject"/>
                     <MenuItem Header="Save"/>
                     <MenuItem Header="Save as..."/>
                     <Separator/>
