--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,19 +3,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Hoi4ModdingSupporter"
         mc:Ignorable="d"
-        Title="Hoi4 Modding Supporter" Height="600" Width="800" Icon="Assets\\goal_unknown.png">
+        Title="Hoi4 Modding Supporter" Height="600" Width="800" Icon=".\goal_unknown.png">
     <Grid x:Name="Back" Background="#FF4D4D4D">
         <DockPanel>
             <Menu x:Name="DockBase" DockPanel.Dock="Top" Background="#FF4D4D4D">
                 <MenuItem Header="File (_F)" Background="White">
-                    <MenuItem Header="New Project" Click="newProject"/>
-                    <MenuItem Header="Open Project" Click="openProject"/>
+                    <MenuItem Header="New Project" Click="NewProject"/>
+                    <MenuItem Header="Open Project" Click="OpenProject"/>
                     <MenuItem Header="Save"/>
                     <MenuItem Header="Save as..."/>
                     <Separator/>
-                    <MenuItem Header="End" Click="endApplication"/>
+                    <MenuItem Header="End" Click="EndApplication"/>
                 </MenuItem>
                 <MenuItem Header="Edit (_E)" Background="White">
                     <MenuItem Header="Undo"/>
@@ -32,10 +31,11 @@
                     <MenuItem Header="Fonts"/>
                 </MenuItem>
                 <MenuItem Header="Help (_H)" Background="White">
-                    <MenuItem Header="About" Click="showAbout"/>
+                    <MenuItem Header="About" Click="ShowAbout"/>
                 </MenuItem>
             </Menu>
         </DockPanel>
+        <TabControl Margin="150,20,250,0" Background="#FF323232" BorderBrush="White"/>
         <TextBox Margin="542,20,0,0" TextWrapping="Wrap" Background="#FF323232" BorderBrush="White"/>
         <TreeView x:Name="FileManager" HorizontalAlignment="Left" Width="150" Background="#FF4D4D4D" BorderBrush="White" Margin="0,20,0,0"/>
     </Grid>
