--- a/NewProject.xaml
+++ b/NewProject.xaml
@@ -1,17 +1,18 @@
-﻿<Window x:Name="NewProject" x:Class="Hoi4ModdingSupporter.NewProject"
+﻿<Window x:Name="NewProjectWindow"
+        x:Class="Hoi4ModdingSupporter.NewProject"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Hoi4ModdingSupporter"
         mc:Ignorable="d"
-        Title="New Project" Height="300" Width="250" Icon="Assets\\goal_unknown.png">
+        Title="New Project" Height="300" Width="250" Icon=".\goal_unknown.png">
     <Grid x:Name="Back" Background="#FF4D4D4D">
-        <Label Content="Project Name" HorizontalAlignment="Left" Height="20" Margin="20,32,0,0" VerticalAlignment="Top" Width="59" FontSize="8" Foreground="White" RenderTransformOrigin="0.472,0.033"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="100,32,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.483,0.1"/>
-        <Button Content="Select Project Folder" HorizontalAlignment="Left" Height="20" Margin="120,65,0,0" VerticalAlignment="Top" Width="100" FontSize="10"/>
-        <Label Content="Full Path: " HorizontalAlignment="Left" Height="25" Margin="20,108,0,0" VerticalAlignment="Top" Width="200" Foreground="White" FontSize="10"/>
-        <Button Content="Accept" HorizontalAlignment="Left" Height="25" Margin="47,234,0,0" VerticalAlignment="Top" Width="90"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Height="25" Margin="142,234,0,0" VerticalAlignment="Top" Width="90"/>
+        <Label Content="Project Name: " HorizontalAlignment="Left" Margin="10,32,0,0" VerticalAlignment="Top" FontSize="9" Foreground="White"/>
+        <Label Content="File Name: " HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Foreground="White" FontSize="9"/>
+        <TextBox Name="projectName" HorizontalAlignment="Right" Height="20" Margin="0,34,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="140"/>
+        <TextBox Name="fileName" HorizontalAlignment="Right" Height="20" Margin="0,68,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="140"/>
+        <Button Content="Select Project Folder" HorizontalAlignment="Right" Height="20" Margin="0,95,15,0" VerticalAlignment="Top" Width="80" FontSize="8" Click="OpenSelectFolderDialog"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Height="25" Margin="47,234,0,0" VerticalAlignment="Top" Width="90" Click="Cancel"/>
+        <Button Content="Accept" HorizontalAlignment="Left" Height="25" Margin="142,234,0,0" VerticalAlignment="Top" Width="90" Click="Accept"/>
     </Grid>
 </Window>
