--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,39 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Hoi4 Modding Supporter" Height="600" Width="800" Icon=".\goal_unknown.png">
-    <Grid x:Name="Back" Background="#FF4D4D4D">
-        <DockPanel>
-            <Menu x:Name="DockBase" DockPanel.Dock="Top" Background="#FF4D4D4D">
-                <MenuItem Header="File (_F)" Background="White">
-                    <MenuItem Header="New Project" Click="NewProject"/>
-                    <MenuItem Header="Open Project" Click="OpenProject"/>
-                    <MenuItem Header="Save"/>
-                    <MenuItem Header="Save as..."/>
-                    <Separator/>
-                    <MenuItem Header="End" Click="EndApplication"/>
-                </MenuItem>
-                <MenuItem Header="Edit (_E)" Background="White">
-                    <MenuItem Header="Undo"/>
-                    <MenuItem Header="Redo"/>
-                    <Separator/>
-                    <MenuItem Header="Cut"/>
-                    <MenuItem Header="Copy"/>
-                    <MenuItem Header="Paste"/>
-                    <MenuItem Header="Delete"/>
-                    <Separator/>
-                    <MenuItem Header="Find"/>
-                </MenuItem>
-                <MenuItem Header="Format (_F)" Background="White">
-                    <MenuItem Header="Fonts"/>
-                </MenuItem>
-                <MenuItem Header="Help (_H)" Background="White">
-                    <MenuItem Header="About" Click="ShowAbout"/>
-                </MenuItem>
-            </Menu>
-        </DockPanel>
-        <TabControl Margin="150,20,250,0" Background="#FF323232" BorderBrush="White"/>
-        <TextBox Margin="542,20,0,0" TextWrapping="Wrap" Background="#FF323232" BorderBrush="White"/>
-        <TreeView x:Name="FileManager" HorizontalAlignment="Left" Width="150" Background="#FF4D4D4D" BorderBrush="White" Margin="0,20,0,0"/>
+        Title="Hoi4 Modding Supporter" Height="800" Width="1200" Icon=".\goal_unknown.png">
+    <Grid x:Name="bg" Background="#FF4D4D4D">
+        <Grid x:Name="buttons" Background="#FF323232" HorizontalAlignment="Left" Width="180">
+        </Grid>
     </Grid>
 </Window>
